--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -329,61 +329,27 @@
 					}
 				});
 			} else {
+				// Helper to create upgrade button
+				const createUpgradeButton = (name, levelProp, achievementId, isMaxed, applyFn = null) => ({
+					type: 'button',
+					label: isMaxed
+						? `${name} Upgrade (MAX LEVEL)`
+						: `${name} Upgrade (Level ${gameState.player[levelProp]} → ${gameState.player[levelProp] + 1})`,
+					disabled: isMaxed,
+					action: () => {
+						gameState.player[levelProp]++;
+						if (applyFn) applyFn();
+						DebugLogger.log(`${name} upgraded to level ${gameState.player[levelProp]}`);
+						achievementManager.setProgress(achievementId, gameState.player[levelProp]);
+						checkUltimateWeaponAchievement();
+						game.resumeFromUpgrade();
+					}
+				});
+
 				// Show upgrade buttons (disabled if maxed)
-				items.push({
-					type: 'button',
-					label: weaponMaxed
-						? `Weapon Upgrade (MAX LEVEL)`
-						: `Weapon Upgrade (Level ${gameState.player.weaponLevel} → ${gameState.player.weaponLevel + 1})`,
-					disabled: weaponMaxed,
-					action: () => {
-						gameState.player.weaponLevel++;
-						DebugLogger.log(`Weapon upgraded to level ${gameState.player.weaponLevel}`);
-
-						// Update weapon upgrade achievement progress
-						achievementManager.setProgress('fully_armed', gameState.player.weaponLevel);
-						checkUltimateWeaponAchievement();
-
-						game.resumeFromUpgrade();
-					}
-				});
-
-				items.push({
-					type: 'button',
-					label: engineMaxed
-						? `Engine Upgrade (MAX LEVEL)`
-						: `Engine Upgrade (Level ${gameState.player.engineLevel} → ${gameState.player.engineLevel + 1})`,
-					disabled: engineMaxed,
-					action: () => {
-						gameState.player.engineLevel++;
-						DebugLogger.log(`Engine upgraded to level ${gameState.player.engineLevel}`);
-
-						// Update engine upgrade achievement progress
-						achievementManager.setProgress('speed_demon', gameState.player.engineLevel);
-						checkUltimateWeaponAchievement();
-
-						game.resumeFromUpgrade();
-					}
-				});
-
-				items.push({
-					type: 'button',
-					label: shieldMaxed
-						? `Shield Upgrade (MAX LEVEL)`
-						: `Shield Upgrade (Level ${gameState.player.shieldLevel} → ${gameState.player.shieldLevel + 1})`,
-					disabled: shieldMaxed,
-					action: () => {
-						gameState.player.shieldLevel++;
-						gameState.player.applyShieldUpgrade(); // Apply max health and heal to full
-						DebugLogger.log(`Shield upgraded to level ${gameState.player.shieldLevel}`);
-
-						// Update shield upgrade achievement progress
-						achievementManager.setProgress('fortress', gameState.player.shieldLevel);
-						checkUltimateWeaponAchievement();
-
-						game.resumeFromUpgrade();
-					}
-				});
+				items.push(createUpgradeButton('Weapon', 'weaponLevel', 'fully_armed', weaponMaxed));
+				items.push(createUpgradeButton('Engine', 'engineLevel', 'speed_demon', engineMaxed));
+				items.push(createUpgradeButton('Shield', 'shieldLevel', 'fortress', shieldMaxed, () => gameState.player.applyShieldUpgrade()));
 			}
 
 			menuSystem.showMenu(MenuSystem.MenuTypes.UPGRADE, {
