vibe+manual: fix sound manager use of preferences
Claude told me what to do, then broke before it could implement the fix itself: https://news.ycombinator.com/item?id=46023364

--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -87,7 +87,7 @@
 		const highScoreManager = new HighScoreManager(menuSystem);
 		const achievementManager = new AchievementManager(menuSystem);
 		const preferencesManager = new PreferencesManager();
-		const soundManager = SoundManager.init();
+		const soundManager = SoundManager.init(preferencesManager);
 		const musicPlayer = new MusicPlayer();
 		const gameState = new GameState(canvas);
 		const game = new Game();
