manual: better text

--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -342,7 +342,7 @@
 				items: items,
 				instructions: allMaxed
 					? 'You have reached maximum power!'
-					: 'Select one upgrade before entering the wormhole'
+					: 'Select one upgrade before entering the next level'
 			});
 		}
 
