--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -25,8 +25,8 @@
 	</script>
 
 	<!-- Stuff for specifically this game -->
-	<script type="text/javascript" defer src="GameEntity.js"></script>
-	<script type="text/javascript" defer src="NPC.js"></script>
+	<script type="module" src="GameEntity.js"></script>
+	<script type="module" src="NPC.js"></script>
 
 	<script type="text/javascript" defer src="AlienFighter.js"></script>
 	<script type="text/javascript" defer src="AlienSaucer.js"></script>
