--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -13,38 +13,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link id="css" rel="stylesheet" href="css.css"/ >
 
-	<!-- Game engine (all engine classes imported automatically) -->
-	<script type="module">
-		import * as VibeEngineModule from './VibeEngine.js';
-
-		// Make all engine classes globally available for game scripts
-		Object.assign(window, VibeEngineModule);
-
-		// Enable debug logging only when running on localhost
-		DebugLogger.debug = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1';
-	</script>
-
-	<!-- Stuff for specifically this game -->
-	<script type="module" src="GameEntity.js"></script>
-	<script type="module" src="NPC.js"></script>
-
-	<script type="text/javascript" defer src="AlienFighter.js"></script>
-	<script type="text/javascript" defer src="AlienSaucer.js"></script>
-	<script type="text/javascript" defer src="AlienScout.js"></script>
-	<script type="text/javascript" defer src="Asteroid.js"></script>
-	<script type="text/javascript" defer src="AsteroidSpawn.js"></script>
-	<script type="text/javascript" defer src="GameConfig.js"></script>
-	<script type="text/javascript" defer src="Laser.js"></script>
-	<script type="text/javascript" defer src="Minimap.js"></script>
-	<script type="text/javascript" defer src="Missile.js"></script>
-	<script type="text/javascript" defer src="MissileCruiser.js"></script>
-	<script type="text/javascript" defer src="NPCAIUtils.js"></script>
-	<script type="text/javascript" defer src="Plasma.js"></script>
-	<script type="text/javascript" defer src="Player.js"></script>
-	<script type="text/javascript" defer src="SpawnSystem.js"></script>
-	<script type="text/javascript" defer src="UpgradeBackground.js"></script>
-	<script type="text/javascript" defer src="Wormhole.js"></script>
-	<script type="text/javascript" defer src="Game.js"></script>
+	<!-- Main game entry point - loads engine and game as modules -->
+	<script type="module" src="main.js"></script>
 </head>
 <body>
 	<div id="gameContainer">
@@ -57,422 +27,5 @@
 			<div class="menu-instructions" id="menuInstructions"></div>
 		</div>
 	</div>
-	<script type="text/javascript">
-		// Wait for the module to load and populate window with engine classes
-		window.addEventListener('DOMContentLoaded', () => {
-		const canvasName = "gameCanvas";
-		// Get the canvas element
-		const canvas = document.getElementById(canvasName);
-		// Get the 2D context
-		const context = canvas.getContext("2d");
-		
-		const engine = VibeEngine.begin(document, canvasName);
-		Sprite.begin(context);
-
-		// Initialize menu system
-		const menuSystem = new MenuSystem(
-			document.getElementById('menuOverlay'),
-			document.getElementById('menuTitle'),
-			document.getElementById('menuButtons'),
-			document.getElementById('menuInstructions')
-		);
-
-		// Initialize globals:
-		const highScoreManager = new HighScoreManager(menuSystem);
-		const achievementManager = new AchievementManager(menuSystem);
-		const preferencesManager = new PreferencesManager();
-		const soundManager = SoundManager.init(preferencesManager);
-		const musicPlayer = new MusicPlayer();
-		let game = null;
-
-		// Preload assets
-		(async () => {
-			await AssetLoader.loadAll(soundManager, musicPlayer);
-
-			// Initialize music volume after Note class is available
-			Note.setVolume(preferencesManager.musicVolume / 100);
-		})();
-
-		// Background will be tiled - store a single tile sprite
-		let backgroundTileSize = new Vector2D(1536, 1024); // Actual size of background image
-		let backgroundSprite = new Sprite(
-			'background-fuzzy-edge.png',
-			new Vector2D(0, 0),
-			backgroundTileSize
-		);
-		
-		musicPlayer.play();
-
-		// Game state management functions
-		async function startGame() {
-			// Resume audio context on user interaction (required by browser autoplay policies)
-			await SoundManager.resumeAudioContext();
-
-			game = new Game(canvas);
-			game.currentState = Game.States.PLAYING;
-			menuSystem.hideMenu();
-			musicPlayer.play();
-			setCursorVisibility(false);
-		}
-
-		function returnToMenu() {
-			game.currentState = null; // No longer in active gameplay
-			// Don't stop music - keep playing in menus
-			setCursorVisibility(true);
-			showMainMenu();
-		}
-
-		// Menu configuration functions
-		function showMainMenu() {
-			setMenuOverlayMode(false); // Opaque overlay with background
-
-			// Start music if not already playing
-			if (!musicPlayer.isPlaying) {
-				musicPlayer.play();
-			}
-
-			// Restore title image if it was replaced by text
-			const titleElement = document.getElementById('menuTitle');
-			if (!titleElement.querySelector('img')) {
-				titleElement.innerHTML = '<img id="menuTitleImage" src="title.png" alt="SPACE SHOOTER" style="width: 325px; height: 28px;">';
-			}
-
-			menuSystem.showMenu(MenuSystem.MenuTypes.MAIN, {
-				title: 'SPACE SHOOTER',
-				items: [
-					{
-						type: 'button',
-						label: 'New Game',
-						action: () => startGame()
-					},
-					{
-						type: 'button',
-						label: 'High Scores',
-						action: () => highScoreManager.showHighScoresMenu()
-					},
-					{
-						type: 'button',
-						label: 'Options',
-						action: () => showOptionsMenu()
-					},
-					{
-						type: 'button',
-						label: 'Achievements',
-						action: () => showAchievementsMenu()
-					}
-				],
-				instructions: 'Arrow Keys or Left Stick: Move | Space or A Button: Shoot | ESC: Pause'
-			});
-		}
-
-
-		function showGameOverMenu() {
-			setMenuOverlayMode(true); // Transparent overlay - show game behind
-
-			let playerName = '';
-
-			// Helper to save score and stop game (shared by all buttons)
-			const saveAndStopGame = () => {
-				const name = playerName.trim() || 'Anonymous';
-				highScoreManager.saveHighScore(name, game.score);
-				game.currentState = null;
-			};
-
-			// Function to submit the score (shared between button and Enter key)
-			const submitScore = () => {
-				saveAndStopGame();
-				highScoreManager.showHighScoresMenu();
-			};
-
-			menuSystem.showMenu(MenuSystem.MenuTypes.GAME_OVER, {
-				title: 'GAME OVER',
-				items: [
-					{
-						type: 'textInput',
-						id: 'playerNameInput',
-						label: 'Enter Your Name:',
-						placeholder: 'Player',
-						maxLength: 15,
-						autofocus: true,
-						onChange: (value) => {
-							playerName = value;
-						},
-						onSubmit: submitScore
-					},
-					{
-						type: 'button',
-						label: 'Submit Score',
-						action: submitScore
-					},
-					{
-						type: 'button',
-						label: 'New Game',
-						action: () => {
-							saveAndStopGame();
-							startGame();
-						}
-					},
-					{
-						type: 'button',
-						label: 'Main Menu',
-						action: () => {
-							saveAndStopGame();
-							returnToMenu();
-						}
-					}
-				],
-				instructions: `Final Score: ${game.score}`
-			});
-		}
-
-		function pauseGame() {
-			if (game.currentState === Game.States.PLAYING) {
-				game.currentState = Game.States.PAUSED;
-				canvas.classList.remove('hide-cursor');
-				showPauseMenu();
-			}
-		}
-
-		function resumeGame() {
-			game.currentState = Game.States.PLAYING;
-			menuSystem.hideMenu();
-			musicPlayer.play();
-			setCursorVisibility(false);
-		}
-
-		function showPauseMenu() {
-			setMenuOverlayMode(true); // Transparent overlay for pause
-
-			menuSystem.showMenu(MenuSystem.MenuTypes.PAUSE, {
-				title: 'PAUSED',
-				items: [
-					{
-						type: 'button',
-						label: 'Continue',
-						action: () => resumeGame()
-					},
-					...getVolumeSliders(),
-					getFullscreenCheckbox(),
-					{
-						type: 'button',
-						label: 'Quit',
-						action: () => {
-							if (game.score > 0) {
-								game.gameOver();
-							} else {
-								returnToMenu();
-							}
-						}
-					}
-				],
-				instructions: ''
-			});
-		}
-
-		function showUpgradeMenu() {
-			// Check Untouchable achievement before advancing
-			if (game.achievementStats.damageTakenThisWave === 0) {
-				achievementManager.unlock('untouchable');
-			}
-
-			// Set upgrading state - time passes but player has no control
-			game.currentState = Game.States.UPGRADING;
-			setCursorVisibility(true);
-			setMenuOverlayMode(true); // Transparent overlay for pause
-
-			// Check max levels
-			const maxWeaponLevel = GameConfig.UPGRADES.WEAPON.length - 1;
-			const maxEngineLevel = GameConfig.UPGRADES.ENGINE.length - 1;
-			const maxShieldLevel = GameConfig.UPGRADES.SHIELD.length - 1;
-
-			const weaponMaxed = game.player.weaponLevel >= maxWeaponLevel;
-			const engineMaxed = game.player.engineLevel >= maxEngineLevel;
-			const shieldMaxed = game.player.shieldLevel >= maxShieldLevel;
-			const allMaxed = weaponMaxed && engineMaxed && shieldMaxed;
-
-			const items = [];
-
-			if (allMaxed) {
-				// All upgrades maxed - show "Heal and Continue" button
-				items.push({
-					type: 'button',
-					label: 'Heal and Continue',
-					action: () => {
-						// Heal to full health
-						game.player.health = game.player.getMaxHealth();
-						DebugLogger.log(`Healed to full health: ${game.player.health}`);
-						game.resumeFromUpgrade();
-					}
-				});
-			} else {
-				// Helper to create upgrade button
-				const createUpgradeButton = (name, levelProp, achievementId, isMaxed, applyFn = null) => ({
-					type: 'button',
-					label: isMaxed
-						? `${name} Upgrade (MAX LEVEL)`
-						: `${name} Upgrade (Level ${game.player[levelProp]} → ${game.player[levelProp] + 1})`,
-					disabled: isMaxed,
-					action: () => {
-						game.player[levelProp]++;
-						if (applyFn) applyFn();
-						DebugLogger.log(`${name} upgraded to level ${game.player[levelProp]}`);
-						achievementManager.setProgress(achievementId, game.player[levelProp]);
-						if (game.player.weaponLevel === 10 &&
-							game.player.engineLevel === 10 &&
-							game.player.shieldLevel === 10) {
-							achievementManager.unlock('ultimate_weapon');
-						}
-						game.resumeFromUpgrade();
-					}
-				});
-
-				// Show upgrade buttons (disabled if maxed)
-				items.push(createUpgradeButton('Weapon', 'weaponLevel', 'fully_armed', weaponMaxed));
-				items.push(createUpgradeButton('Engine', 'engineLevel', 'speed_demon', engineMaxed));
-				items.push(createUpgradeButton('Shield', 'shieldLevel', 'fortress', shieldMaxed, () => game.player.applyShieldUpgrade()));
-			}
-
-			menuSystem.showMenu(MenuSystem.MenuTypes.UPGRADE, {
-				title: allMaxed ? 'ALL UPGRADES COMPLETE' : 'CHOOSE UPGRADE',
-				items: items,
-				instructions: allMaxed
-					? 'You have reached maximum power!'
-					: 'Select one upgrade before entering the next level'
-			});
-		}
-
-		function showOptionsMenu() {
-			setMenuOverlayMode(false); // Opaque overlay with background
-
-			menuSystem.showMenu(MenuSystem.MenuTypes.OPTIONS, {
-				title: 'OPTIONS',
-				items: [
-					...getVolumeSliders(),
-					getFullscreenCheckbox(),
-					{
-						type: 'button',
-						label: 'Back',
-						action: () => showMainMenu()
-					}
-				],
-				instructions: ''
-			});
-		}
-
-		function showAchievementsMenu() {
-			setMenuOverlayMode(false); // Opaque overlay with background
-
-			// Build achievement list with unlock status and progress
-			const achievementList = GameConfig.ACHIEVEMENTS.map(achievement => {
-				return {
-					...achievement,
-					unlocked: achievementManager.isUnlocked(achievement.id),
-					progress: achievementManager.getProgress(achievement.id)
-				};
-			});
-
-			const unlockedCount = achievementManager.getUnlockedCount();
-			const totalCount = achievementManager.getTotalCount();
-
-			menuSystem.showMenu(MenuSystem.MenuTypes.ACHIEVEMENTS, {
-				title: 'ACHIEVEMENTS',
-				items: [
-					{
-						type: 'achievementList',
-						achievements: achievementList,
-						headerText: `${unlockedCount} / ${totalCount} Unlocked`
-					},
-					{
-						type: 'button',
-						label: 'Back',
-						action: () => showMainMenu()
-					}
-				],
-				instructions: ''
-			});
-		}
-
-		// Helper: Get volume slider controls (used in Pause and Options menus)
-		function getVolumeSliders() {
-			return [
-				{
-					type: 'slider',
-					label: 'Sound Effects Volume',
-					min: 0,
-					max: 100,
-					value: preferencesManager.soundEffectsVolume,
-					suffix: '%',
-					onChange: (value) => {
-						preferencesManager.soundEffectsVolume = parseInt(value);
-					}
-				},
-				{
-					type: 'slider',
-					label: 'Music Volume',
-					min: 0,
-					max: 100,
-					value: preferencesManager.musicVolume,
-					suffix: '%',
-					onChange: (value) => {
-						preferencesManager.musicVolume = parseInt(value);
-						Note.setVolume(preferencesManager.musicVolume / 100);
-					}
-				}
-			];
-		}
-
-		// Helper: Get fullscreen checkbox control (used in Pause and Options menus)
-		function getFullscreenCheckbox() {
-			return {
-				type: 'checkbox',
-				label: 'Fullscreen',
-				checked: VibeEngine.instance.isFullScreen,
-				onChange: (checked) => {
-					if (checked && !VibeEngine.instance.isFullScreen) {
-						VibeEngine.instance.enterFullScreen();
-					} else if (!checked && VibeEngine.instance.isFullScreen) {
-						VibeEngine.instance.exitFullScreen();
-					}
-				}
-			};
-		}
-
-		// Helper: Set cursor visibility
-		function setCursorVisibility(visible) {
-			if (visible) {
-				canvas.classList.remove('hide-cursor');
-			} else {
-				canvas.classList.add('hide-cursor');
-			}
-		}
-
-		// Helper: Set menu overlay mode (pause = transparent overlay, regular = opaque)
-		function setMenuOverlayMode(isPauseMode) {
-			const overlay = document.getElementById('menuOverlay');
-			if (isPauseMode) {
-				overlay.classList.add('pause');
-			} else {
-				overlay.classList.remove('pause');
-			}
-		}
-
-		// Wrapper functions for game loop
-		function update(deltaTime) {
-			if (game != null) {
-				game.update(deltaTime);
-			}
-		}
-
-		function render() {
-			if (game != null) {
-				game.render();
-			}
-		}
-
-		// Show main menu and start game loop
-		showMainMenu();
-		engine.start(update, render, () => Sprite.stillLoading());
-		}); // End DOMContentLoaded
-	</script>
 </body>
 </html>
